<resources>
    <string name="app_name">Pokemon Memory Game</string>
    <string name="new_game">New Game</string>
    <string name="score_board">Score Board</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="custom">Custom</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="logo">Logo</string>
    <string name="title">Title</string>
    <string name="start_game">Start Game</string>
    <string name="moves">moves:</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="finishedGame">You finished game in: %d move/s</string>
    <string-array name="pokemons">
        <item>abra</item>
        <item>alakazam</item>
        <item>arbok</item>
        <item>arcanine</item>
        <item>beedrill</item>
        <item>bellsprout</item>
        <item>blastoise</item>
        <item>bulbasaur</item>
        <item>butterfree</item>
        <item>caterpie</item>
        <item>charizard</item>
        <item>charmander</item>
        <item>charmeleon</item>
        <item>clefable</item>
        <item>clefairy</item>
        <item>cubone</item>
        <item>diglett</item>
        <item>dugtrio</item>
        <item>ekans</item>
        <item>fearow</item>
        <item>gastly</item>
        <item>gloom</item>
        <item>golbat</item>
        <item>golduck</item>
        <item>growlithe</item>
        <item>ivysaur</item>
        <item>jigglypuff</item>
        <item>kadabra</item>
        <item>kakuna</item>
        <item>koffing</item>
        <item>machamp</item>
        <item>machoke</item>
        <item>machop</item>
        <item>magnemite</item>
        <item>mankey</item>
        <item>meowth</item>
        <item>metapod</item>
        <item>nidoking</item>
        <item>nidoqueen</item>
        <item>nidoran_f</item>
        <item>nidoran_m</item>
        <item>nidorina</item>
        <item>nidorino</item>
        <item>ninetales</item>
        <item>oddish</item>
        <item>paras</item>
        <item>parasect</item>
        <item>persian</item>
        <item>pidgeot</item>
        <item>pidgeotto</item>
        <item>pidgey</item>
        <item>pikachu</item>
        <item>poliwag</item>
        <item>poliwhirl</item>
        <item>poliwrath</item>
        <item>ponyta</item>
        <item>primeape</item>
        <item>psyduck</item>
        <item>raichu</item>
        <item>raticate</item>
        <item>rattata</item>
        <item>sandshrew</item>
        <item>sandslash</item>
        <item>slowpoke</item>
        <item>spearow</item>
        <item>squirtle</item>
        <item>venomoth</item>
        <item>venonat</item>
        <item>venusaur</item>
        <item>victreebel</item>
        <item>vileplume</item>
        <item>vulpix</item>
        <item>wartortle</item>
        <item>weedle</item>
        <item>weepinbell</item>
        <item>wigglytuff</item>
        <item>zubat</item>
    </string-array>
    <string name="startAgain">Start Again</string>
</resources>