<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0000"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3a5da9"
        android:fontFamily="@font/aldrich"
        android:onClick="startGame"
        android:padding="8dp"
        android:text="@string/new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pokeball"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/pokeball"
        app:layout_constraintTop_toTopOf="@+id/pokeball"
        app:layout_constraintVertical_bias="0.757" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="377dp"
        android:layout_height="134dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/title"
        android:src="@drawable/pokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pokeball"
        android:layout_width="210dp"
        android:layout_height="156dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/pokeball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>