<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:onClick="createGame"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/columnsDropdown" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rows"
        app:layout_constraintBottom_toTopOf="@+id/rowsDropdown"
        app:layout_constraintStart_toStartOf="@+id/rowsDropdown" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/columns"
        app:layout_constraintBottom_toTopOf="@+id/columnsDropdown"
        app:layout_constraintStart_toStartOf="@+id/columnsDropdown" />

    <Spinner
        android:id="@+id/rowsDropdown"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/columnsDropdown"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="@+id/rowsDropdown"
        app:layout_constraintTop_toBottomOf="@+id/rowsDropdown" />
</androidx.constraintlayout.widget.ConstraintLayout>